--- a/src/test/java/Resources/extent.properties
+++ b/src/test/java/Resources/extent.properties
@@ -8,6 +8,6 @@ extent.reporter.spark.prefix.author=@author_
 extent.reporter.spark.vieworder=dashboard,test,category,device,author,exception
 extent.reporter.spark.base64imagesrc=false
 extent.reporter.pdf.start=true
-extent.reporter.pdf.out=target/ExtentReports/DemoBlaze_HaZim Aly.pdf
+extent.reporter.pdf.out=target/ExtentReports/DemoBlaze_HaZim-Aly.pdf
 screenshot.dir=screenshot/
 screenshot.rel.path=../../screenshot/
